tests/valid/08_condicion.patito
programa condicion;
vars
    x, y : entero;
inicio
{
    x = 5;
    si (x > 0) {
        y = 1;
    } ;
    si (x > 0) {
        y = 1;
    } sino {
        y = -1;
    } ;
    si (x < 10) {
        si (x > 0) {
            y = x;
        } ;
    } sino {
        y = 0;
    } ;
}
fin
