tests/invalid/10_si_sin_pcoma.patito
programa siMalo;
vars
    x : entero;
inicio
{
    si (x > 0) {
        x = 1;
    }
    x = 2;
}
fin
